Fix mobile header spacing

--- a/_sass/jekyll-theme-minimalist.scss
+++ b/_sass/jekyll-theme-minimalist.scss
@@ -235,7 +235,7 @@ footer {
   }
 
   header {
-    padding-right:320px;
+    padding-right:120px;
   }
 
   section {
